--- a/app/src/main/res/layout/list_nature.xml
+++ b/app/src/main/res/layout/list_nature.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:gravity="bottom"
+    android:layout_gravity="bottom"
     tools:context=".DetailsGare">
 
     <LinearLayout
@@ -20,14 +20,36 @@
             tools:text="Nom de Gare"
             android:textStyle="bold"
             android:textSize="30dp"
-            android:textColor="@color/white"
-            />
+            android:textColor="@color/white" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@color/white">
+
+            <TextView
+                android:id="@+id/textDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/black"
+                android:text="Select Date (MM-DD-YYYY)"
+                android:padding="9dp"/>
+
+            <Button
+                android:id="@+id/buttonDate"
+                android:layout_marginStart="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="date"/>
+        </LinearLayout>
 
         <ListView
             android:id="@+id/list_nature"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"/>
-
     </LinearLayout>
+
 </RelativeLayout>
