--- a/app/src/main/res/layout/activity_search_type.xml
+++ b/app/src/main/res/layout/activity_search_type.xml
@@ -5,8 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient3"
     android:orientation="vertical"
+    android:background="#CDCDCD"
     tools:context=".SearchType">
 
     <LinearLayout
@@ -58,11 +58,10 @@
             android:text="date" />
     </LinearLayout>
 
-
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="12dp"
+        android:layout_margin="15dp"
         android:id="@+id/listViewType"/>
 
 </LinearLayout>
