--- a/app/src/main/res/layout/activity_toolbar.xml
+++ b/app/src/main/res/layout/activity_toolbar.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".ToolbarActivity">
+    tools:context=".ToolbarActivity"
+    android:id="@+id/toolbar"
+    android:background="#011942"
+    android:titleTextColor="@color/white"
+>
 
-    <Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#011942"
-        android:titleTextColor="@color/white"/>
+        android:src="@drawable/logo_loupe2"
+        android:layout_gravity="center"
+        android:layout_marginTop="7dp" />
 
-</LinearLayout>
+</Toolbar>
