--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -13,8 +13,8 @@
         android:title="Liste"/>
 
     <item
-        android:id="@+id/action_test"
-        android:title="Liste detaille"/>
+        android:id="@+id/action_info"
+        android:title="Déclarer une perte"/>
 
     <item
         android:id="@+id/action_favorite"
