--- a/app/src/main/res/layout/activity_search_type.xml
+++ b/app/src/main/res/layout/activity_search_type.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#CDCDCD"
-    tools:context=".SearchType">
+    tools:context=".SearchTypeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="15dp"
-            android:text="Selectionner une date "
+            android:text="Selectionner une date ..."
             android:textColor="@color/white"
             android:textSize="15dp" />
 
