--- a/app/src/main/res/layout/details_gare.xml
+++ b/app/src/main/res/layout/details_gare.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="bottom"
     tools:context=".DetailsGare">
 
@@ -14,7 +15,7 @@
         android:background="@drawable/bg_round_list">
 
         <TextView
-            android:id="@+id/title_txt"
+            android:id="@+id/textTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Nom de Gare"
@@ -34,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textColor="@color/black"
-                android:text="Select Date (MM-DD-YYYY)"
+                android:text="Selectionner une date ..."
                 android:padding="9dp"/>
 
             <Button
@@ -46,7 +47,7 @@
         </LinearLayout>
 
         <ListView
-            android:id="@+id/list_nature"
+            android:id="@+id/listNature"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"/>
