--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -14,25 +14,28 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/white"
+        android:gravity="center_horizontal"
+        android:background="#CDD3D5"
         android:layout_gravity="center">
 
         <AutoCompleteTextView
             android:id="@+id/selectGare"
             android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:hint="Selectionner une gare ... "
-            android:completionThreshold="1"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"/>
+            android:layout_marginLeft="2dp"
+            android:padding="12dp"
+            android:hint="Entrez une gare "
+            android:completionThreshold="1"
+            android:background="@android:drawable/editbox_background" />
 
         <Button
             android:onClick="submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
+            android:padding="10dp"
             android:text="ok"/>
 
     </LinearLayout>
