--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".OtherActivity"
-    android:background="#001C3C">
+    tools:context=".OtherActivity">
 
     <ImageView
         android:id="@+id/imageViewObjetTrouve"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:src="@drawable/sncf_objects" />
+        android:layout_height="wrap_content"
+        android:src="@drawable/sncf_objects"
+        android:background="#F3F4F4"/>
 
     <LinearLayout
         android:layout_width="match_parent"
