--- a/app/src/main/res/layout/activity_toolbar.xml
+++ b/app/src/main/res/layout/activity_toolbar.xml
@@ -11,9 +11,9 @@
 
     <ImageView
         android:layout_width="110dp"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:src="@drawable/logo_loupe2"
         android:layout_gravity="center"
-        android:layout_marginTop="7dp" />
+        android:padding="5dp" />
 
 </Toolbar>
