--- a/app/src/main/res/layout/details_gare.xml
+++ b/app/src/main/res/layout/details_gare.xml
@@ -20,8 +20,10 @@
             android:layout_height="wrap_content"
             tools:text="Nom de Gare"
             android:textStyle="bold"
-            android:textSize="30dp"
-            android:textColor="@color/white" />
+            android:textSize="25dp"
+            android:textColor="@color/white"
+            android:layout_marginBottom="18dp"
+            android:layout_marginTop="18dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,12 +33,13 @@
 
             <TextView
                 android:id="@+id/textDate"
-                android:layout_width="wrap_content"
+                android:layout_width="10dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textColor="@color/black"
+                android:padding="10dp"
                 android:text="Selectionner une date ..."
-                android:padding="9dp"/>
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
             <Button
                 android:id="@+id/buttonDate"
@@ -50,7 +53,8 @@
             android:id="@+id/listNature"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"/>
+            android:background="@color/white"
+            />
     </LinearLayout>
 
 </RelativeLayout>
