--- a/app/src/main/res/layout/activity_select_object.xml
+++ b/app/src/main/res/layout/activity_select_object.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SelectObjectActivity"
     android:orientation="vertical"
-    android:background="#DADCE2">
+    tools:context=".SelectObjectActivity">
 
-    <include layout="@layout/activity_toolbar" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,106 +16,16 @@
         android:textStyle="bold"
         android:gravity="center"
         android:layout_marginBottom="10dp"/>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:layout_margin="10dp">
-
-            <ImageView
-                android:id="@+id/imageViewValise"
-                android:background="#CA5D15"
-                android:layout_width="130dp"
-                android:layout_height="150dp"
-                android:src="@drawable/ic_valise" />
-            <ImageView
-                android:id="@+id/imageViewElectronic"
-                android:background="#5F09A1"
-                android:layout_width="130dp"
-                android:layout_height="150dp"
-                android:src="@drawable/ic_electronic"/>
-            <ImageView
-                android:id="@+id/imageViewClothes"
-                android:background="#9EC112"
-                android:layout_width="130dp"
-                android:layout_height="150dp"
-                android:src="@drawable/ic_clothes"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:layout_margin="10dp">
-            <ImageView
-                android:id="@+id/imageViewWallet"
-                android:background="#C12312"
-                android:layout_width="130dp"
-                android:layout_height="150dp"
-                android:src="@drawable/ic_porte_feuille"/>
-            <ImageView
-                android:id="@+id/imageViewPassport"
-                android:background="#0A1389"
-                android:layout_width="130dp"
-                android:layout_height="150dp"
-                android:src="@drawable/ic_passport"/>
-            <ImageView
-                android:id="@+id/imageViewOptic"
-                android:background="#07DEDE"
-                android:layout_width="130dp"
-                android:layout_height="150dp"
-                android:src="@drawable/ic_glasses"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:layout_margin="10dp">
-            <ImageView
-                android:id="@+id/imageViewLivre"
-                android:background="#E2DA66"
-                android:layout_width="130dp"
-                android:layout_height="150dp"
-                android:src="@drawable/ic_livre"/>
-            <ImageView
-                android:id="@+id/imageViewCle"
-                android:background="#7FEDC9"
-                android:layout_width="130dp"
-                android:layout_height="150dp"
-                android:src="@drawable/ic_keys"/>
-            <ImageView
-                android:id="@+id/imageViewMontre"
-                android:background="#FE7552"
-                android:layout_width="130dp"
-                android:layout_height="150dp"
-                android:src="@drawable/ic_montre"/>
-    </LinearLayout>
-
-    <LinearLayout
+    <Button
+        android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical">
+        android:background="@drawable/ic_passport" />
+    <Button
+        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_passport" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:text="Vos objets ne figurent pas ici ?\n Cliquer sur le bouton si dessous"/>
-
-        <Button
-            android:onClick="submitSearch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="cliquer ici"
-            android:textStyle="bold"
-            android:layout_gravity="center"/>
-    </LinearLayout>
 
 </LinearLayout>
