--- a/app/src/main/res/layout/activity_select_object.xml
+++ b/app/src/main/res/layout/activity_select_object.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SelectObjectActivity"
+    tools:context=".ui.listing.SelectObjectActivity"
     android:background="#D8D8D8">
 
     <LinearLayout
